[package]
name = "wasm-testing"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[features]
web = ["wgpu/webgl"]

[dependencies]
console_error_panic_hook = "0.1.7"
winit = "0.26.1"
log = "0.4.14"
console_log = "0.2.0"
futures = "0.3.0"
pixels = "0.9.0"
wgpu = "0.12.0"
embedded-graphics = "0.7.1"

# Got this from the winit repo root Cargo.toml
[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.22"
features = [
    'Gpu',
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.45"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2"
